--- a/artemisa-front/src/index.html
+++ b/artemisa-front/src/index.html
@@ -14,6 +14,9 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <link rel="stylesheet"  href="assets/css/main.css"/>
+  
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
